5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1791_3123.log
== TEST (2019-05-29 14:14:30) 
-- CODE:
from numpy import *
vet=array(eval(float("n numeros reais :")))
t=0
while(vet > 0):
	cont=t + 1
	M=((v[t] ** -1) / vet) ** -1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:49) 
-- CODE:
from numpy import *
vet=array(eval("n numeros reais :"))
t=0
while(vet > 0):
	cont=t + 1
	M=((v[t] ** -1) / vet) ** -1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:15:15) 
-- CODE:
from numpy import *
vet=array(eval("n numeros reais :"))
t=0
while(vet > 0):
	cont=t + 1
	M=((v[t] ** -1) / vet) ** -1
print(round(M,2))
-- EXECUTION TIME:
0.513698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3123/main.py", line 2, in <module>
    vet=array(eval("n numeros reais :"))
  File "<string>", line 1
    n numeros reais :
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:16:06) 
-- CODE:
from numpy import *
vet=array(eval("n numeros reais :"))
t=0
while(vet > 0):
	cont=t + 1
	M=((v[t] ** -1) / vet) ** -1
	i=cont+1
print(round(M,2))
-- EXECUTION TIME:
0.455767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3123/main.py", line 2, in <module>
    vet=array(eval("n numeros reais :"))
  File "<string>", line 1
    n numeros reais :
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:07) 
-- CODE:
from numpy import *
vet=array(eval("n numeros reais :"))
t=0
while(vet > 0):
	cont=t + 1
	M=((v[t] ** -1) / vet) ** -1
	i=cont+1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:17) 
-- CODE:
from numpy import *
vet=array(float(eval("n numeros reais :")))
t=0
while(vet > 0):
	cont=t + 1
	M=((v[t] ** -1) / vet) ** -1
	i=cont+1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:02) 
-- CODE:
from numpy import *
vet=array(float(eval("n numeros reais :")))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:16) 
-- CODE:
from numpy import *
vet=array(float(eval("numeros reais :")))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:41) 
-- CODE:
from numpy import *
vet=array(int(eval("numeros reais :")))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:11) 
-- CODE:
from numpy import *
vet=array(eval("numeros reais :"))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:25) 
-- CODE:
from numpy import *

vet=array(eval("numeros reais :"))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:55) 
-- CODE:
from numpy import *

vet=array(float(eval("numeros reais :")))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:17) 
-- CODE:
from numpy import *

vet=array(eval("numeros reais:"))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:41) 
-- CODE:
from numpy import *

vet=array(eval("numeros reais:"))
t=0
while(vet > -1):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:15) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet > -1):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:35) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:28:35) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet > 0):
	cont=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- EXECUTION TIME:
0.537178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3123/main.py", line 5, in <module>
    while(vet > 0):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:23) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet > 0):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:46) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet > size(0)):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:51) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet > size(0)):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:03) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(vet == 0):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:26) 
-- CODE:
from numpy import *

vet=array(eval(float(input("numeros reais:"))))
t=0
while(vet):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:16) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= vet < -1):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:39) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= size(vet) < -1):
	t=t + 1
	M=(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:02) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= size(vet) < -1):
	t=t + 1
	M =(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:36:03) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= size(vet) < -1):
	t=t + 1
	M =(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- EXECUTION TIME:
0.402114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3123/main.py", line 9, in <module>
    print(round(M,2))
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:47) 
-- CODE:
from numpy import *

vet=array(eval(float(input("numeros reais:"))))
t=0
while(t <= size(vet) < -1):
	t=t + 1
	M =(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:55) 
-- CODE:
from numpy import *

vet=array(eval(float(input("numeros reais:"))))
t=0
while(t <= size(vet)-1):
	t=t + 1
	M =(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:17) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= size(vet)-1):
	t=t + 1
	M =(((v[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:32) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= size(vet)-1):
	t=t + 1
	M =(((vet[t] ** -1) / vet) ** -1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:02) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
t=0
while(t <= size(vet)-1):
	t=t + 1
	M =(((vet[t] ** (-1)) / vet) ** (-1))
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:08) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0
ex=-1
while(t <= size(vet)-1):
	cont=t + 1
	M=(((vet[t] ** (-1)) / vet) 
	m=M ** (-1)
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    m=M ** (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:14) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0
ex=-1
while(t <= size(vet)-1):
	cont=t + 1
	M=(((vet[t] ** (-1)) / vet) 
	m= M ** (-1)
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    m= M ** (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:42) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0
ex=-1
while(t <= size(vet)-1):
	cont=t + 1
	M=(((vet[t] ** (-1)) / vet) 
	m=M ** ex
print(round(,2))
-- ERROR:
File "XXXX", line 9
    m=M ** ex
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:54) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(t <= size(vet)-1):
	cont=t + 1
	M=(((vet[t] ** (-1)) / vet) ** (-1))
print(round(,2))
-- ERROR:
File "XXXX", line 9
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:01) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(t <= size(vet)-1):
	cont=t + 1
	M=(((vet[t] ** (-1)) / vet) ** (-1))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:22) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)-1):
	cont=t + 1
	M=(((vet[t] ** (-1)) / vet) ** (-1))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:36) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)-1):
	cont=t + 1
	M=(((vet[cont] ** (-1)) / vet) ** (-1))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:59) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)-1):
	cont=cont + 1
	M=(((vet[cont] ** (-1)) / vet) ** (-1))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:23) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)-1):
	cont=cont + 1
	M=((vet[cont] ** (-1)) / vet) ** (-1)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:57) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)-1):
	cont=cont + 1
		M=((vet[cont] ** (-1)) / vet) ** (-1)
	
print(round(M,2))
-- ERROR:
File "XXXX", line 8
    M=((vet[cont] ** (-1)) / vet) ** (-1)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:01) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)-1):
	cont=cont + 1
	M=((vet[cont] ** (-1)) / vet) ** (-1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:33) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)) and (size(vet)> -1):
	cont=cont + 1
	M=((vet[cont] ** (-1)) / vet) ** (-1)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:01) 
-- CODE:
from numpy import *

vet=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)) and (size(vet)> -1):
	
	M=((vet[cont] ** (-1)) / vet) ** (-1)
	cont=cont + 1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:19) 
-- CODE:
from numpy import *

v=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)) and (size(vet)> -1):
	
	M=((v[cont] ** (-1)) / v) ** (-1)
	cont=cont + 1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:37) 
-- CODE:
from numpy import *

v=array(eval(input("numeros reais:")))
cont=0

while(cont <= size(vet)):
	
	M=((v[cont] ** (-1)) / v) ** (-1)
	cont=cont + 1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:25) 
-- CODE:
from numpy import *

v=array(eval(input("numeros reais:")))
t=0
i=o
while(cont <= size(vet)):
	
	M=((v[i] ** (-1)) / v) ** (-1)
	cont=cont + 1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:34) 
-- CODE:
from numpy import *

v=array(eval(input("numeros reais:")))
t=0
i=0
while(cont <= size(vet)):
	
	M=((v[i] ** (-1)) / v) ** (-1)
	cont=cont + 1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:49) 
-- CODE:
from numpy import *

v=array(eval(input("numeros reais:")))
t=0
i=0
while(t >= 0):
	
	M=((v[i] ** (-1)) / v) ** (-1)
	cont=cont + 1
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
